docker-registry/base/docker-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: docker-registry-tls
  name: docker-registry
spec:
  ports:
    - name: https
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: docker-registry
  type: ClusterIP
