docker-registry/base/docker-registry-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: docker-registry
spec:
  port:
    targetPort: https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: docker-registry
